# movie-recommendation-system

./: .gitignore  READ.me  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
app/: requirements.txt  streamlit_app.py
docs/: MODEL_CARD.md  architecture.md
scripts/: run_local.sh
src/mrs/config/: settings.py
src/mrs/data/: download.py  preprocess.py
src/mrs/evaluation/: metrics.py  offline_eval.py  report.py
src/mrs/models/: base.py  content_tfidf.py  popularity.py
src/mrs/pipelines/: train.py
src/mrs/serving/: api.py  movies_lookup.py
tests/integration/: test_api_smoke.py
tests/unit/: test_preprocess.py
