[project]
name = "mrs"
version = "0.1.0"
description = "Movie Recommendation System (baseline + content-based) with FastAPI serving"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "joblib>=1.3",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501", "B008"]


[tool.ruff.lint.isort]
known-first-party = ["mrs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
